# open-body-fit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows.yml
R/: 036CR1-Example.Rmd  magnitudes.R  plot_skeleton_2d.R  plot_skeleton_3d.R  point_cloud_3d.R  slider_skeleton_3d.R
demo/: 036CR1-2d-landmarks.csv  036CR1-2d-raw.csv  036CR1-3d-postprocess.csv  036CR1-3d.bvh  036CR1-3d.csv  036CR1-3d.csv.bak  036CR1-3d_aaccs.txt  036CR1-3d_accs.txt  036CR1-3d_avels.txt  036CR1-3d_body.txt  036CR1-3d_energy.txt  036CR1-3d_forces.txt  036CR1-3d_positions.txt  036CR1-3d_vels.txt  036CR1-CMatrix.mat  skeleton-test.bvh  skeleton.bvh  skeleton.ini
shaders/: floor.fs  floor.vs  phong.fs  sprite.vs  unlit.vs
src/: CMakeLists.txt
src/agl/: renderer.cpp
src/apps/: CMakeLists.txt  INIReader.h  anthropometrics.cpp  bodyfitparams.cpp  bodyfitparams.h  dartskeleton.h  ik.cpp  ik.h  loadpoints.cpp  loadpoints.h  openbodyfit.cpp  physicsskeleton.cpp  physicsskeleton.h
src/atk/: CMakeLists.txt  bvhreader.cpp  bvhreader.h  bvhwriter.cpp  bvhwriter.h  glmmath.h  joint.cpp  joint.h  motion.cpp  motion.h  pose.cpp  pose.h  skeleton.cpp  skeleton.h  toolkit.h  transform.cpp  transform.h
src/levmar-2.6/: CMakeLists.txt
src/openbodyfit/: CMakeLists.txt  anthropometrics.cpp  anthropometrics.h  dartskeleton.cpp  dartskeleton.h  ik.cpp  loadpoints.cpp  loadpoints.h  openbodyfit.cpp  unitutils.cpp  unitutils.h
